crates/rs_html_parser/tests/snapshots/html5lib_test4_test__tests__attribute_name_starting_with_apos1.snap
---
source: crates/rs_html_parser/tests/html5lib_test4_test.rs
expression: "parser_test(r####\"<foo '='bar'>\"####)"
---
[
    Token {
        data: "foo",
        attrs: Some(
            {
                "'": Some(
                    (
                        "bar",
                        Single,
                    ),
                ),
            },
        ),
        kind: OpenTag,
        is_implied: false,
    },
    Token {
        data: "foo",
        attrs: None,
        kind: CloseTag,
        is_implied: true,
    },
]
