crates/rs_html_parser/tests/snapshots/html5lib_test4_test__tests__lt_in_attribute_name.snap
---
source: crates/rs_html_parser/tests/html5lib_test4_test.rs
expression: "parser_test(r####\"<z/0  <>\"####)"
---
[
    Token {
        data: "z",
        attrs: Some(
            {
                "0": None,
                "<": None,
            },
        ),
        kind: OpenTag,
        is_implied: false,
    },
    Token {
        data: "z",
        attrs: None,
        kind: CloseTag,
        is_implied: true,
    },
]
