crates/rs_html_parser/tests/snapshots/html5lib_test4_test__tests__quoted_attribute_followed_by_non_hyphen_permitted.snap
---
source: crates/rs_html_parser/tests/html5lib_test4_test.rs
expression: "parser_test(r####\"<bar a='b'/>\"####)"
---
[
    Token {
        data: "bar",
        attrs: Some(
            UniCaseBTreeMap {
                inner: {
                    "a": Some(
                        (
                            "b",
                            Single,
                        ),
                    ),
                },
            },
        ),
        kind: OpenTag,
        is_implied: false,
    },
    Token {
        data: "bar",
        attrs: None,
        kind: CloseTag,
        is_implied: true,
    },
]
