crates/rs_html_parser/tests/snapshots/html5lib_test4_test__tests__quoted_attribute_followed_by_permitted.snap
---
source: crates/rs_html_parser/tests/html5lib_test4_test.rs
expression: "parser_test(r####\"<br a='b'/>\"####)"
---
[
    Token {
        data: "br",
        attrs: Some(
            {
                "a": Some(
                    (
                        "b",
                        Single,
                    ),
                ),
            },
        ),
        kind: OpenTag,
        is_implied: false,
    },
    Token {
        data: "br",
        attrs: None,
        kind: CloseTag,
        is_implied: true,
    },
]
