crates/rs_html_parser/tests/snapshots/html5lib_test4_test__tests__text_after_bogus_character_reference.snap
---
source: crates/rs_html_parser/tests/html5lib_test4_test.rs
expression: "parser_test(r####\"<z z='&xlink_xmlns;'>bar<z>\"####)"
---
[
    Token {
        data: "z",
        attrs: Some(
            UniCaseBTreeMap {
                inner: {
                    "z": Some(
                        (
                            "&xlink_xmlns;",
                            Single,
                        ),
                    ),
                },
            },
        ),
        kind: OpenTag,
        is_implied: false,
    },
    Token {
        data: "bar",
        attrs: None,
        kind: Text,
        is_implied: false,
    },
    Token {
        data: "z",
        attrs: None,
        kind: OpenTag,
        is_implied: false,
    },
    Token {
        data: "z",
        attrs: None,
        kind: CloseTag,
        is_implied: true,
    },
    Token {
        data: "z",
        attrs: None,
        kind: CloseTag,
        is_implied: true,
    },
]
