crates/rs_html_parser/tests/snapshots/html5lib_test4_test__tests__u_plus_0000_in_lookahead_region_after_non_hyphen_matching_character.snap
---
source: crates/rs_html_parser/tests/html5lib_test4_test.rs
expression: "parser_test(r####\"<!doc>\u0000\"####)"
---
[
    Token {
        data: "doc",
        attrs: None,
        kind: ProcessingInstruction,
        is_implied: false,
    },
    Token {
        data: "\0",
        attrs: None,
        kind: Text,
        is_implied: false,
    },
]
