crates/rs_html_parser/tests/snapshots/html5lib_test4_test__tests__uppercase_attribute_name.snap
---
source: crates/rs_html_parser/tests/html5lib_test4_test.rs
expression: "parser_test(r####\"<x X>\"####)"
---
[
    Token {
        data: "x",
        attrs: Some(
            {
                "x": None,
            },
        ),
        kind: OpenTag,
        is_implied: false,
    },
    Token {
        data: "x",
        attrs: None,
        kind: CloseTag,
        is_implied: true,
    },
]
